unpackaged/main/default/objects/Account/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <label>Account Created Date</label>
    <type>DateTime</type>
</CustomField>