unpackaged/main/default/objects/Account/fields/Account_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Account_Lifecycle__c</fullName>
    <label>SaaS Customer Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churning</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>