unpackaged/main/default/objects/Account/fields/Account_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Level__c</fullName>
    <label>Account Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>