unpackaged/main/default/objects/Account/fields/account_size__c.field-meta.xml
<CustomField>
    <fullName>account_size__c</fullName>
    <description>Segment name based on number of locations</description>
    <formula>IF( ISBLANK ( Ultimate_Parent__c ), 
  IF(CONTAINS(TEXT(organization_type__c), &quot;Dental&quot;),
    IF( number_of_locations__c &lt; 4, &quot;Small Business&quot;, 
      IF( number_of_locations__c &lt; 10, &quot;Mid-Market&quot;, 
        IF( number_of_locations__c &gt;= 10, &quot;Enterprise&quot;, &quot;Unknown&quot; )
      )
    ),
    IF(
      AND( number_of_locations__c &lt; 4, number_of_providers__c &lt; 7), &quot;Small Business&quot;,
        IF(AND( number_of_locations__c &lt; 10, number_of_providers__c &lt; 30), &quot;Mid-Market&quot;,
          IF(
            OR(number_of_locations__c &gt;= 10, number_of_providers__c &gt;= 30),&quot;Enterprise&quot;,
            &quot;Unknown&quot;
          )
        )
    )
  )
,
  IF( CONTAINS(TEXT(Ultimate_Parent__r.organization_type__c), &quot;Dental&quot;),
      IF( Ultimate_Parent__r.number_of_locations__c &lt; 4, &quot;Small Business&quot;, 
        IF( Ultimate_Parent__r.number_of_locations__c &lt; 10, &quot;Mid-Market&quot;, 
          IF( Ultimate_Parent__r.number_of_locations__c &gt;= 10, &quot;Enterprise&quot;, &quot;Unknown&quot; )
        )
      ),
      IF(
        AND( Ultimate_Parent__r.number_of_locations__c &lt; 4, Ultimate_Parent__r.number_of_providers__c &lt; 7), &quot;Small Business&quot;,
          IF(AND( Ultimate_Parent__r.number_of_locations__c &lt; 10, Ultimate_Parent__r.number_of_providers__c &lt; 30), &quot;Mid-Market&quot;,
            IF(
              OR(Ultimate_Parent__r.number_of_locations__c &gt;= 10, Ultimate_Parent__r.number_of_providers__c &gt;= 30),&quot;Enterprise&quot;,
              &quot;Unknown&quot;
            )
          )
      )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Segment name based on number of locations</inlineHelpText>
    <label>Account Size</label>
    <type>Text</type>
</CustomField>