unpackaged/main/default/objects/Account/fields/account_source_detail__c.field-meta.xml
<CustomField>
    <fullName>account_source_detail__c</fullName>
    <label>Account Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>lead_source_details</valueSetName>
    </valueSet>
</CustomField>