unpackaged/main/default/objects/Account/fields/Account_Transfer_Cooldown_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Cooldown_Date__c</fullName>
    <formula>FROMUNIXTIME(
	MAX( 
	  	UNIXTIMESTAMP(TODAY()),
	  	UNIXTIMESTAMP(
			FROMUNIXTIME(
				    MAX(
		UNIXTIMESTAMP( BLANKVALUE( Last_Sales_Assignment_Date__c + 45,DATEVALUE(&quot;2000-01-01&quot;))),
		UNIXTIMESTAMP( BLANKVALUE( referral_date__c + 45, DATEVALUE(&quot;2000-01-01&quot;)))
					)
				    )
		
		              )  
	   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Cooldown Date</label>
    <type>Date</type>
</CustomField>