unpackaged/main/default/objects/Account/fields/Active_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Active_Relationships__c</fullName>
    <description>This field is a multiselect picklist of different relationships with NexHealth including all of our partnership types and customer types. This field can be used to understand Accounts with multiple relationships with NexHealth such as Developers who are also Customers, or Partners who are both Affiliate and Reseller. Values in this picklist go on to populate unique boolean fields for each relationship type for easier reporting. 

If one of these relationships is churned, it will be removed from this multiselect and the related unique bool will be marked FALSE.</description>
    <label>Active Relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller Partenr</fullName>
                <label>Reseller Partner</label>
            </value>
            <value>
                <fullName>Affiliate Partner</fullName>
            </value>
            <value>
                <fullName>Developer Partner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Reseller Customer</fullName>
            </value>
            <value>
                <fullName>Affiliate Customer</fullName>
            </value>
            <value>
                <fullName>Developer Customer</fullName>
            </value>
            <value>
                <fullName>Direct Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>