unpackaged/main/default/objects/Account/fields/Affiliate_Customer__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliate Customer</label>
    <type>Checkbox</type>
</CustomField>