unpackaged/main/default/objects/Account/fields/Also_Known_As__c.field-meta.xml
<CustomField>
    <fullName>Also_Known_As__c</fullName>
    <inlineHelpText>Does this account go by another name?</inlineHelpText>
    <label>Also Known As</label>
    <length>128</length>
    <type>Text</type>
</CustomField>