unpackaged/main/default/objects/Account/fields/API_Churn_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>API_Churn_Request_Count__c</fullName>
    <label>API Churn Request Count</label>
    <type>DateTime</type>
</CustomField>