unpackaged/main/default/objects/Account/fields/API_Churn_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>API_Churn_Requested_At__c</fullName>
    <label>API Churn Requested At</label>
    <type>DateTime</type>
</CustomField>