unpackaged/main/default/objects/Account/fields/API_Contraction_Amount_locations__c.field-meta.xml
<CustomField>
    <fullName>API_Contraction_Amount_locations__c</fullName>
    <label>API Contraction Amount (locations)</label>
    <type>DateTime</type>
</CustomField>