unpackaged/main/default/objects/Account/fields/API_Customer_Churned_At__c.field-meta.xml
<CustomField>
    <fullName>API_Customer_Churned_At__c</fullName>
    <label>API Customer Churned At</label>
    <type>DateTime</type>
</CustomField>