unpackaged/main/default/objects/Account/fields/API_Customer_Days__c.field-meta.xml
<CustomField>
    <fullName>API_Customer_Days__c</fullName>
    <formula>IF( NOT( ISBLANK( First_API_Contraction_At__c ) ) , Now() - First_API_Contraction_At__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Customer Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>