unpackaged/main/default/objects/Account/fields/API_Location_Churned__c.field-meta.xml
<CustomField>
    <fullName>API_Location_Churned__c</fullName>
    <label>API Location Churned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>