unpackaged/main/default/objects/Account/fields/API_Locations_Active__c.field-meta.xml
<CustomField>
    <fullName>API_Locations_Active__c</fullName>
    <formula>API_Locations_Sold__c -  API_Location_Churned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Locations Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>