unpackaged/main/default/objects/Account/fields/api_locations_active_count__c.field-meta.xml
<CustomField>
    <fullName>api_locations_active_count__c</fullName>
    <label>Active API Locations</label>
    <summarizedField>Opportunity.license_count__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>API, API Access</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Install Complete</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.billing_status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>