unpackaged/main/default/objects/Account/fields/API_Locations_Sold__c.field-meta.xml
<CustomField>
    <fullName>API_Locations_Sold__c</fullName>
    <label>API Locations Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>