unpackaged/main/default/objects/Account/fields/API_Supports_Developer_Requirements__c.field-meta.xml
<CustomField>
    <fullName>API_Supports_Developer_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Supports Developer Requirements</label>
    <type>Checkbox</type>
</CustomField>