unpackaged/main/default/objects/Account/fields/Asset_Title__c.field-meta.xml
<CustomField>
    <fullName>Asset_Title__c</fullName>
    <label>Asset Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>