unpackaged/main/default/objects/Account/fields/At_Risk_Locations_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Locations_in_Hierarchy__c</fullName>
    <description>Used as roll up field for Account Hierarchy package to roll up At Risk (Numeric) in hierarchy.</description>
    <label># At Risk Locations in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>