unpackaged/main/default/objects/Account/fields/At_Risk_Numeric__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Numeric__c</fullName>
    <description>Indicates if an Account&#39;s Risk Level is filled in and not Low. Used for Account Hierarchy package rollups.</description>
    <formula>IF(OR( ISPICKVAL(Account_Risk_Level__c, &quot;&quot;),
      ISPICKVAL(Account_Risk_Level__c, &quot;Low&quot;)

      ), 0, 1
   )</formula>
    <label>At Risk (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>