unpackaged/main/default/objects/Account/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Who does the partner do business with?</description>
    <inlineHelpText>Who does the partner do business with?</inlineHelpText>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>organization_types</valueSetName>
    </valueSet>
</CustomField>