unpackaged/main/default/objects/Account/fields/Average_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_CSAT_Score__c</fullName>
    <inlineHelpText>This field will have data in it if the Contacts related to this Account have received and filled out CSAT Surveys.</inlineHelpText>
    <label>Average CSAT Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>