unpackaged/main/default/objects/Account/fields/Average_CSAT_Score_Group__c.field-meta.xml
<CustomField>
    <fullName>Average_CSAT_Score_Group__c</fullName>
    <inlineHelpText>This field will only have data in it if the Account has children Accounts connected to it. If that&#39;s the case, this field will show the average CSAT score from all Contacts against all the children Accounts.</inlineHelpText>
    <label>Average CSAT Score (Group)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>