unpackaged/main/default/objects/Account/fields/Average_NPS__c.field-meta.xml
<CustomField>
    <fullName>Average_NPS__c</fullName>
    <label>Average NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>