unpackaged/main/default/objects/Account/fields/Avg_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>Avg_CSAT_Score__c</fullName>
    <formula>IF( OR(Average_CSAT_Score__c = 0, ISBLANK(Average_CSAT_Score__c)), null, Average_CSAT_Score__c)</formula>
    <inlineHelpText>This field will have data in it if the Contacts related to this Account have received and filled out CSAT Surveys.</inlineHelpText>
    <label>Avg CSAT Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>