unpackaged/main/default/objects/Account/fields/Avg_CSAT_Score_Group__c.field-meta.xml
<CustomField>
    <fullName>Avg_CSAT_Score_Group__c</fullName>
    <formula>IF( OR(Average_CSAT_Score_Group__c = 0, ISBLANK(Average_CSAT_Score_Group__c)), null, Average_CSAT_Score_Group__c)</formula>
    <inlineHelpText>This field will only have data in it if the Account has children Accounts connected to it. If that&#39;s the case, this field will show the average CSAT score from all Contacts against all the children Accounts.</inlineHelpText>
    <label>Avg CSAT Score (Group)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>