unpackaged/main/default/objects/Account/fields/Became_a_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Customer_Date__c</fullName>
    <description>Describes the close date of the first New Business opportunity on this account.</description>
    <label>Became SaaS Customer At</label>
    <type>DateTime</type>
</CustomField>