unpackaged/main/default/objects/Account/fields/Became_a_Developer_Partner_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Developer_Partner_Date__c</fullName>
    <label>Became a Developer At</label>
    <type>DateTime</type>
</CustomField>