unpackaged/main/default/objects/Account/fields/Became_a_Reseller_Partner_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Reseller_Partner_Date__c</fullName>
    <label>Became a Reseller At</label>
    <type>DateTime</type>
</CustomField>