unpackaged/main/default/objects/Account/fields/Billing_Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Line_2__c</fullName>
    <description>Stores the Billing Street Line 2 in combination with Billing Street to store a full address. This field is synced from the product which needs 2 discrete fields for street information.</description>
    <label>Billing Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>