unpackaged/main/default/objects/Account/fields/Chargebee_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Chargebee_Customer_ID__c</fullName>
    <label>Chargebee Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>