unpackaged/main/default/objects/Account/fields/Churned_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Churned_Customer_Date__c</fullName>
    <label>SaaS Customer Churned At</label>
    <type>DateTime</type>
</CustomField>