unpackaged/main/default/objects/Account/fields/Clean_Website__c.field-meta.xml
<CustomField>
    <fullName>Clean_Website__c</fullName>
    <formula>left(
IF(OR(BEGINS(Website, &quot;http://www&quot;),BEGINS(Website, &quot;https://www&quot;), BEGINS(Website, &quot;www.&quot;)),
    SUBSTITUTE(Website, LEFT(Website, FIND(&quot;.&quot;, Website)), NULL),
        IF(BEGINS(Website, &quot;http://&quot;),
            MID(Website, FIND(&#39;http://&#39;, Website, 1)+7, (LEN(Website) - FIND(&#39;http://&#39;, Website, 1)+7)),
                IF(BEGINS(Website, &quot;https://&quot;),
                    MID(Website, FIND(&#39;https://&#39;, Website, 1)+8, (LEN(Website) - FIND(&#39;https://&#39;, Website, 1)+8)),
                        Website
                )
        )
)

,FIND(&#39;.&#39;,

IF(OR(BEGINS(Website, &quot;http://www&quot;),BEGINS(Website, &quot;https://www&quot;), BEGINS(Website, &quot;www.&quot;)),
    SUBSTITUTE(Website, LEFT(Website, FIND(&quot;.&quot;, Website)), NULL),
        IF(BEGINS(Website, &quot;http://&quot;),
            MID(Website, FIND(&#39;http://&#39;, Website, 1)+7, (LEN(Website) - FIND(&#39;http://&#39;, Website, 1)+7)),
                IF(BEGINS(Website, &quot;https://&quot;),
                    MID(Website, FIND(&#39;https://&#39;, Website, 1)+8, (LEN(Website) - FIND(&#39;https://&#39;, Website, 1)+8)),
                        Website
                )
        )
)
 )-1)</formula>
    <label>Clean Website</label>
    <type>Text</type>
</CustomField>