unpackaged/main/default/objects/Account/fields/Company_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Company_Maturity__c</fullName>
    <label>Company Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup/Pre-Revenue</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Publicly Traded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>