unpackaged/main/default/objects/Account/fields/competitor_contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>competitor_contract_end_date__c</fullName>
    <inlineHelpText>When does the contract end?</inlineHelpText>
    <label>Competitor Contract End Date</label>
    <type>Date</type>
</CustomField>