unpackaged/main/default/objects/Account/fields/Competitor_Primary__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Primary__c</fullName>
    <inlineHelpText>What is the primary competing solution the prospect is using?</inlineHelpText>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>competitors</valueSetName>
    </valueSet>
</CustomField>