unpackaged/main/default/objects/Account/fields/competitors_in_use__c.field-meta.xml
<CustomField>
    <fullName>competitors_in_use__c</fullName>
    <inlineHelpText>Is the account using competing solutions?</inlineHelpText>
    <label>Competitors in Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>competitors</valueSetName>
    </valueSet>
</CustomField>