unpackaged/main/default/objects/Account/fields/Confrere__c.field-meta.xml
<CustomField>
    <fullName>Confrere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilizing Confrere</label>
    <type>Checkbox</type>
</CustomField>