unpackaged/main/default/objects/Account/fields/CSM_Onboarding_URL__c.field-meta.xml
<CustomField>
    <fullName>CSM_Onboarding_URL__c</fullName>
    <description>Pulls the CSM onboarding schedule link from user details to be inserted in Hubspot.</description>
    <formula>Customer_Success_Manger__r.Onboarding_Schedule_Link__c</formula>
    <label>CSM Onboarding URL</label>
    <type>Text</type>
</CustomField>