unpackaged/main/default/objects/Account/fields/Customer_Success_Manger__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Manger</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>