unpackaged/main/default/objects/Account/fields/Date_Referenced__c.field-meta.xml
<CustomField>
    <fullName>Date_Referenced__c</fullName>
    <businessOwnerUser>kristen.lee@nexhealth.com.ccdev</businessOwnerUser>
    <inlineHelpText>Indicates last time the account was used as a reference</inlineHelpText>
    <label>Date Referenced</label>
    <type>Date</type>
</CustomField>