unpackaged/main/default/objects/Account/fields/definitive_group_id__c.field-meta.xml
<CustomField>
    <fullName>definitive_group_id__c</fullName>
    <description>Unique ID for the account within the Definitive Healthcare dataset</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for the account within the Definitive Healthcare dataset</inlineHelpText>
    <label>Definitive Group ID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>