unpackaged/main/default/objects/Account/fields/Developer_Customer__c.field-meta.xml
<CustomField>
    <fullName>Developer_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Developer Customer</label>
    <type>Checkbox</type>
</CustomField>