unpackaged/main/default/objects/Account/fields/Developer_Integration_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Developer_Integration_Requirements__c</fullName>
    <label>Developer Integration Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>integration_requirements</valueSetName>
    </valueSet>
</CustomField>