unpackaged/main/default/objects/Account/fields/Developer_Market_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Developer_Market_Relationship__c</fullName>
    <label>Developer Market Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Placeholder 1</fullName>
                <isActive>false</isActive>
                <label>Placeholder 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>