unpackaged/main/default/objects/Account/fields/Developer_Partner__c.field-meta.xml
<CustomField>
    <fullName>Developer_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Developer Partner</label>
    <type>Checkbox</type>
</CustomField>