unpackaged/main/default/objects/Account/fields/Developer_Payment_Default_Amount__c.field-meta.xml
<CustomField>
    <fullName>Developer_Payment_Default_Amount__c</fullName>
    <inlineHelpText>What is the default pricing per location?</inlineHelpText>
    <label>Developer Payment Default Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>