unpackaged/main/default/objects/Account/fields/Developer_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Developer_Payment_Type__c</fullName>
    <label>Developer Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paying per Location</fullName>
            </value>
            <value>
                <fullName>Per API call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>