unpackaged/main/default/objects/Account/fields/Developer_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Developer_Product_Description__c</fullName>
    <description>Place to put notes on what the product does / solves</description>
    <inlineHelpText>Place to put notes on what the product does / solves</inlineHelpText>
    <label>Developer Product Description</label>
    <type>TextArea</type>
</CustomField>