unpackaged/main/default/objects/Account/fields/Developer_Product_Primary_Type__c.field-meta.xml
<CustomField>
    <fullName>Developer_Product_Primary_Type__c</fullName>
    <label>Developer Product Primary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>