unpackaged/main/default/objects/Account/fields/Developer_Product_Stage__c.field-meta.xml
<CustomField>
    <fullName>Developer_Product_Stage__c</fullName>
    <label>Developer Product Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>