unpackaged/main/default/objects/Account/fields/Developer_Size__c.field-meta.xml
<CustomField>
    <fullName>Developer_Size__c</fullName>
    <label>Developer Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>