unpackaged/main/default/objects/Account/fields/Developer_Status__c.field-meta.xml
<CustomField>
    <fullName>Developer_Status__c</fullName>
    <label>Developer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>