unpackaged/main/default/objects/Account/fields/Disqualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Date__c</fullName>
    <label>Disqualification Date</label>
    <type>Date</type>
</CustomField>