unpackaged/main/default/objects/Account/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Reason the Account was disqualified</description>
    <inlineHelpText>Reason the Account was disqualified</inlineHelpText>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>disqualification_reasons</valueSetName>
    </valueSet>
</CustomField>