unpackaged/main/default/objects/Account/fields/Disqualified_By__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_By__c</fullName>
    <label>Disqualified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>