unpackaged/main/default/objects/Account/fields/Disqualified_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_By_Role__c</fullName>
    <label>Disqualified By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>