unpackaged/main/default/objects/Account/fields/DSODC_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>DSODC_Company_Id__c</fullName>
    <description>External ID of the DSO this account belongs to. All accounts tagged to this ID should be situated within the same account hierarchy.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID of the DSO this account belongs to. All accounts tagged to this ID should be situated within the same account hierarchy.</inlineHelpText>
    <label>DSO Company Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>