unpackaged/main/default/objects/Account/fields/DSODC_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>DSODC_Location_Id__c</fullName>
    <description>Unique external Id of this Account within the DSO Hierarchy</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique external Id of this Account within the DSO Hierarchy</inlineHelpText>
    <label>DSO Location Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>