unpackaged/main/default/objects/Account/fields/DSODC_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>DSODC_Parent_Id__c</fullName>
    <description>External Parent Id of the DSO this Account belongs to</description>
    <inlineHelpText>External Parent Id of the DSO this Account belongs to</inlineHelpText>
    <label>DSO Parent Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>