unpackaged/main/default/objects/Account/fields/Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSMAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>