unpackaged/main/default/objects/Account/fields/Enlive_Active__c.field-meta.xml
<CustomField>
    <fullName>Enlive_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enlive Active</label>
    <type>Checkbox</type>
</CustomField>