unpackaged/main/default/objects/Account/fields/Enlive_ID__c.field-meta.xml
<CustomField>
    <fullName>Enlive_ID__c</fullName>
    <description>Enlive Location ID</description>
    <inlineHelpText>Enlive Location ID</inlineHelpText>
    <label>Enlive ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>