unpackaged/main/default/objects/Account/fields/Estimated_Account_MRR__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Account_MRR__c</fullName>
    <description>MRR from Opportunities minus MRR from Churn</description>
    <formula>MRR_from_Opportunities__c -  MRR_from_Churn__c</formula>
    <inlineHelpText>MRR from Opportunities minus MRR from Churn</inlineHelpText>
    <label>Estimated Account MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>