unpackaged/main/default/objects/Account/fields/facility_drdds_id__c.field-meta.xml
<CustomField>
    <fullName>facility_drdds_id__c</fullName>
    <externalId>true</externalId>
    <label>DrDDS Record ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>